# Projeto-DeSCin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main_api.cpp  start.sh  vercel.json
api/: .gitignore  api_types.hpp  descin_node.cpp  descin_node.hpp  main.cpp
api/.zed/: tasks.json
api/controllers/: auth_controller.cpp  auth_controller.hpp  controller.hpp  projects_controller.cpp  projects_controller.hpp  user_controller.cpp  user_controller.hpp  wallet_controller.cpp  wallet_controller.hpp  wallets_controller.cpp
api/exceptions/: exceptions.hpp
api/models/: model.hpp
api/routes/: auth_routes.cpp  auth_routes.hpp  projects_routes.cpp  projects_routes.hpp  routes.cpp  routes.hpp  user_routes.cpp  user_routes.hpp  wallets_routes.cpp  wallets_routes.hpp
api/services/: auth_service.cpp  auth_service.hpp  projects_service.cpp  projects_service.hpp  service.hpp  user_service.cpp  user_service.hpp  wallets_service.cpp
api/utils/: password.cpp  password.hpp
backend/blockchain-core/src/: transaction.hpp
backend/projects-core/: project_create_tx.hpp  project_state.hpp  projects.cpp  projects.hpp
backend/users-core/: user_state.cpp  user_state.hpp
core/: .gitignore
core/src/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  database.cpp  main.cpp  wallet.cpp  wallet.hpp
core/src/api/routes/: project_routes.hpp
core/src/utils/: hash.hpp
data/: projects.json
database/: database.cpp  database.hpp  key_vault.cpp  key_vault.hpp  schema.sql  transparency_log.cpp  transparency_log.hpp
database/supabase/: supabase.cpp  supabase.hpp
docs/: index.html  style.css
docs/assets/: index-DJRXN0ba.js  index-DKw119ST.js  index-D_uu0lya.css
frontend/: .env.mock  .env.real  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/adapters/: projectAdapter.ts  walletAdapter.ts
frontend/src/components/auth/: AuthLayout.tsx
frontend/src/components/brand/: Logo.tsx
frontend/src/components/charts/: DonutChart.tsx  PortfolioChart.tsx  PriceChart.tsx  Sparkline.tsx
frontend/src/components/dashboard/: AssetsTable.tsx  DashboardChart.tsx  FeaturedProjectCard.tsx  FeaturedProjects.tsx  LiveFeed.tsx  MarketBriefing.tsx  MarketStats.tsx  PeriodSelector.tsx  PortfolioOverview.tsx  TopMovers.tsx
frontend/src/components/layout/: AppLayout.tsx  BottomNav.tsx  Header.tsx  HeaderBalance.tsx  HeaderLogo.tsx  HeaderMobileMenu.tsx  HeaderNav.tsx  HeaderUserMenu.tsx  Sidebar.tsx
frontend/src/components/project/: AssetRow.tsx  ProjectCard.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  GlassCard.tsx  Input.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  TickerLabel.tsx  Toast.tsx  Tooltip.tsx
frontend/src/components/wallet/: AllocationDonut.tsx  DepositModal.tsx  WalletHero.tsx  WithdrawModal.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: usePriceHistory.ts  useProject.ts  useProjects.ts  useScrollState.ts
frontend/src/mocks/: dashboard.ts  data.ts
frontend/src/pages/: Configuracoes.tsx  Dashboard.tsx  Explorar.tsx  Projeto.tsx  Wallet.tsx
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  Register.tsx
frontend/src/pages/curadoria/: index.tsx
frontend/src/pages/founder/: index.tsx
frontend/src/services/: auth.ts  projects.ts  transactions.ts  wallet.ts
frontend/src/stores/: auth.store.ts  project.store.ts  projects.store.ts  theme.store.ts  ui.store.ts  wallet.store.ts
frontend/src/types/: api.ts  index.ts
frontend/src/utils/: briefing.ts  color.ts  format.ts  period.ts
ui/: package.json  vite.config.ts
ui/src/: main.tsx
ui/src/pages/: MainPage.tsx
